force-app/main/default/objects/PatchManagerSettings__c/PatchManagerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PatchManagerSettings</label>
</CustomObject>