force-app/main/default/objects/PatchManagerSettings__c/fields/Default_Account_User__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_User__c</fullName>
    <label>Default Account User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>