force-app/main/default/objects/PatchManagerSettings__c/fields/Default_Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Distributor_ID__c</fullName>
    <defaultValue>&quot;00540000003nDzv&quot;</defaultValue>
    <label>Default Distributor ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>