force-app/main/default/objects/PatchManagerSettings__c/fields/Default_SDR_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_SDR_ID__c</fullName>
    <label>Default SDR ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>