force-app/main/default/objects/PatchManagerSettings__c/fields/Default_TAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_TAP_ID__c</fullName>
    <defaultValue>&quot;0051W000004FfLV&quot;</defaultValue>
    <label>Default TAP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>