force-app/main/default/objects/PatchManagerSettings__c/fields/Default_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_User_Id__c</fullName>
    <label>Default User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>