force-app/main/default/objects/PatchManagerSettings__c/fields/Route_on_Insert_Contact__c.field-meta.xml
<CustomField>
    <fullName>Route_on_Insert_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Route on Insert Contact</label>
    <type>Checkbox</type>
</CustomField>