force-app/main/default/objects/PatchManagerSettings__c/fields/Route_on_Insert_Lead__c.field-meta.xml
<CustomField>
    <fullName>Route_on_Insert_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Route on Insert - Lead</label>
    <type>Checkbox</type>
</CustomField>