force-app/main/default/objects/PatchManagerSettings__c/fields/Route_on_Insert_Partner__c.field-meta.xml
<CustomField>
    <fullName>Route_on_Insert_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Patch manager settings for a partner onboarding approvals</description>
    <label>Route on Insert Partner</label>
    <type>Checkbox</type>
</CustomField>